apps/add-on/eck/ingress_kibana.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
  - host: kibana-gke.devopspoops.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: quickdemo-kb-http
            port: 5601

  tls:
  - hosts:
    - kibana-gke.devopspoops.com
    secretName: kibana-secret
